--- a/fusor-ember-cli/package.json
+++ b/fusor-ember-cli/package.json
@@ -41,6 +41,8 @@
     "ember-radio-buttons": "^2.1.0",
     "express": "^4.8.5",
     "glob": "^4.0.5",
-    "torii": "^0.2.2"
+    "morgan": "^1.5.1",
+    "torii": "^0.2.2",
+    "ember-cli-divshot": "^0.1.7"
   }
 }
