--- a/fusor-ember-cli/package.json
+++ b/fusor-ember-cli/package.json
@@ -21,16 +21,22 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.0.0",
     "broccoli-ember-hbs-template-compiler": "^1.6.1",
-    "ember-cli": "0.1.9",
-    "ember-cli-6to5": "0.2.1",
-    "ember-cli-bootstrap-sass": "< 0.2.0",
+    "ember-cli": "0.1.15",
+    "ember-cli-6to5": "^3.0.0",
+    "ember-cli-app-version": "0.3.1",
     "ember-cli-content-security-policy": "0.3.0",
     "ember-cli-dependency-checker": "0.0.7",
-    "ember-cli-font-awesome": "0.0.4",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
-    "ember-cli-qunit": "0.1.2",
+    "ember-cli-qunit": "0.3.7",
+    "ember-cli-uglify": "1.0.1",
+    "ember-data": "1.0.0-beta.14.1",
+    "ember-export-application-global": "^1.0.2",
+    "express": "^4.8.5",
+    "glob": "^4.0.5",
+    "ember-cli-bootstrap-sass": "< 0.2.0",
     "ember-cli-sass": "^2.0.3",
+    "ember-cli-font-awesome": "0.0.4",
     "ember-cli-showdown": "^0.1.3",
     "ember-cli-simple-auth": "^0.7.2",
     "ember-cli-simple-auth-oauth2": "^0.7.2",
@@ -38,8 +44,6 @@
     "ember-data": "1.0.0-beta.12",
     "ember-drag-drop": "^0.1.3",
     "ember-export-application-global": "^1.0.0",
-    "express": "4.8.5",
-    "glob": "4.0.5",
     "morgan": "^1.5.1",
     "torii": "^0.2.2",
     "ember-cli-divshot": "^0.1.7",
