--- a/fusor-ember-cli/package.json
+++ b/fusor-ember-cli/package.json
@@ -32,6 +32,7 @@
     "ember-cli-qunit": "0.3.10",
     "ember-cli-sass": "~3.3.0",
     "ember-cli-showdown": "~2.1.3",
+    "ember-cli-simple-auth": "0.7.3",
     "ember-cli-uglify": "1.0.1",
     "ember-data": "1.0.0-beta.16.1",
     "ember-export-application-global": "^1.0.2",
